--- a/MES/Views/CommonBizPartnerNewView.xaml
+++ b/MES/Views/CommonBizPartnerNewView.xaml
@@ -1,21 +1,17 @@
-﻿<UserControl
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    x:Class="MesAdmin.Views.CommonBizPartnerNewView"
-    mc:Ignorable="d"
-    xmlns:dxt="http://schemas.devexpress.com/winfx/2008/xaml/core/themekeys"
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" 
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors" 
-    d:DesignHeight="600" d:DesignWidth="800"
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-    xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
-    xmlns:view="clr-namespace:MesAdmin.Views"
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    DataContext="{dxmvvm:ViewModelSource Type=ViewModels:CommonBizPartnerNewVM}">
-
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
+             x:Class="MesAdmin.Views.CommonBizPartnerNewView"
+             mc:Ignorable="d"
+             d:DesignHeight="600" d:DesignWidth="800"
+             DataContext="{dxmvvm:ViewModelSource Type=ViewModels:CommonBizPartnerNewVM}">
     <UserControl.Resources>
         <dxmvvm:ObjectToObjectConverter x:Key="EntityStateConverter">
             <dxmvvm:MapItem Source="Added" Target="True"/>
@@ -71,8 +67,9 @@
                             </Border>
                             <dxe:TextEdit
                                 Text="{Binding CommonBizPartnerItem.BizCode, UpdateSourceTrigger=PropertyChanged}"
-                                IsEnabled="False"
-                                Grid.Row="0" Background="#D9E5F3"
+                                IsReadOnly="True"
+                                Grid.Row="0"
+                                Background="#F3F6FB"
                                 ShowError="False"
                                 Grid.Column="1"
                                 VerticalAlignment="Bottom"
