--- a/MES/Views/ExceptionDetailsView.xaml
+++ b/MES/Views/ExceptionDetailsView.xaml
@@ -107,7 +107,7 @@
                                 <dxb:BarButtonItem Content="컬럼정의" LargeGlyph="{dx:DXImage SvgImages/Snap/ModifyTableStyle.svg}">
                                     <dxmvvm:Interaction.Behaviors>
                                         <dxmvvm:ConfirmationBehavior 
-                                        Command="{Binding SaveCommand, ElementName=SerializeHelper}"
+                                        Command="{Binding SaveLayoutCmd, ElementName=SerializeHelper}"
                                         MessageText="현재설정으로 저장하시겠습니까?"
                                         MessageIcon="Question"
                                         MessageButton="YesNo" />
@@ -116,7 +116,7 @@
                                 <dxb:BarButtonItem Content="기본컬럼" LargeGlyph="{dx:DXImage SvgImages/Dashboards/Grid.svg}">
                                     <dxmvvm:Interaction.Behaviors>
                                         <dxmvvm:ConfirmationBehavior 
-                                        Command="{Binding RestoreCommand, ElementName=SerializeHelper}"
+                                        Command="{Binding RestoreLayoutCmd, ElementName=SerializeHelper}"
                                         MessageText="기본설정으로 초기화됩니다."
                                         MessageIcon="Question"
                                         MessageButton="YesNo" />
@@ -137,7 +137,7 @@
                     ShowLoadingPanel="{Binding IsBusy, Mode=TwoWay}"
                     EnableSmartColumnsGeneration="True">
                     <dxmvvm:Interaction.Behaviors>
-                        <common:CommandToMethod x:Name="SerializeHelper" ViewName="ExceptionDetailsView"/>
+                        <common:GridLayoutSaveCommand x:Name="SerializeHelper" ViewName="ExceptionDetailsView"/>
                     </dxmvvm:Interaction.Behaviors>
                     <dxg:GridControl.View>
                         <custom:DSTableView x:Name="TableView" 
