--- a/MES/Views/Site/SIBAC60SD001R.xaml
+++ b/MES/Views/Site/SIBAC60SD001R.xaml
@@ -81,7 +81,7 @@
                                 <dxb:BarButtonItem Content="컬럼정의" LargeGlyph="{dx:DXImage SvgImages/Snap/ModifyTableStyle.svg}">
                                     <dxmvvm:Interaction.Behaviors>
                                         <dxmvvm:ConfirmationBehavior 
-                                        Command="{Binding SaveCommand, ElementName=SerializeHelper}"
+                                        Command="{Binding SaveLayoutCmd, ElementName=SerializeHelper}"
                                         MessageText="현재설정으로 저장하시겠습니까?"
                                         MessageIcon="Question"
                                         MessageButton="YesNo" />
@@ -90,7 +90,7 @@
                                 <dxb:BarButtonItem Content="기본컬럼" LargeGlyph="{dx:DXImage SvgImages/Dashboards/Grid.svg}">
                                     <dxmvvm:Interaction.Behaviors>
                                         <dxmvvm:ConfirmationBehavior 
-                                        Command="{Binding RestoreCommand, ElementName=SerializeHelper}"
+                                        Command="{Binding RestoreLayoutCmd, ElementName=SerializeHelper}"
                                         MessageText="기본설정으로 초기화됩니다."
                                         MessageIcon="Question"
                                         MessageButton="YesNo" />
@@ -108,7 +108,7 @@
                     ShowLoadingPanel="{Binding IsBusy, Mode=TwoWay}"
                     EnableSmartColumnsGeneration="True">
                     <dxmvvm:Interaction.Behaviors>
-                        <common:CommandToMethod x:Name="SerializeHelper" ViewName="SIBAC60SD001R"/>
+                        <common:GridLayoutSaveCommand x:Name="SerializeHelper" ViewName="SIBAC60SD001R"/>
                     </dxmvvm:Interaction.Behaviors>
                     <dxg:GridControl.View>
                         <custom:DSTableView
