--- a/MES/MainWindow.xaml
+++ b/MES/MainWindow.xaml
@@ -1,8 +1,10 @@
 ﻿<dx:ThemedWindow    x:Class="MesAdmin.MainWindow"
                     Title="MES NeoLux"
                     WindowState="{common:SettingBindingExtension WindowState}"
-                    Height="{common:SettingBindingExtension Height}" Width="{common:SettingBindingExtension Width}"
-                    Left="{common:SettingBindingExtension Left}" Top="{common:SettingBindingExtension Top}"
+                    Height="{common:SettingBindingExtension Height}"
+                    Width="{common:SettingBindingExtension Width}"
+                    Left="{common:SettingBindingExtension Left}"
+                    Top="{common:SettingBindingExtension Top}"
                     xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
